[project]
name = "bootcamp-11"
version = "0.1.0"
description = ""
authors = [
    {name = "Nathan Vinicius",email = "limavinicius195@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlmodel (>=0.0.27,<0.0.28)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
